@@ -1,3 +1,9 @@
+2006-04-18  David Reveman  <davidr@novell.com>
+
+	* plugins/resize.c: Constrain cursor movement to min/max window size.
+
+	* src/window.c (constrainNewWindowSize): Fix aspect ratio calculations.
+
 2006-04-17  David Reveman  <davidr@novell.com>
 
 	* plugins/cube.c: Put PNG on top face by default.
